// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build action build 1`] = `
"
# cspell-tools: keep-case no-split

black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;

exports[`build action build 2`] = `
"
# cspell-tools: keep-case no-split

black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;

exports[`build action build 3`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=32
# Built by cspell-tools.
# Data:
__DATA__
L
o
ndon$4s Angeles$9<2
M
e
xico City$9<2
N
e
w Amsterdam$9Delhi$5York$8
P
a
ri#d;<4
S
a
n Francisco$9<4
"
`;

exports[`build action build 4`] = `
"
# cspell-tools: keep-case no-split

London
Los Angeles
Mexico City
New Amsterdam
New Delhi
New York
Paris
San Francisco
black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;

exports[`build action build 5`] = `
"
# cspell-tools: keep-case no-split

Amsterdam
Angeles
City
Delhi
Francisco
London
Los
Mexico
New
Paris
San
York
black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;

exports[`build action build multi 1`] = `
"
# cspell-tools: keep-case no-split

black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;

exports[`build action build multi 2`] = `
"
# cspell-tools: keep-case no-split

!Codemsg
!Errorerror
!codecode
!err
+code
+code+
+error
+error+
+msg
Café
Code
Code+
Error
Error+
msg
"
`;

exports[`build action build multi 3`] = `
"
# cspell-tools: keep-case no-split

London
Los Angeles
Mexico City
New Amsterdam
New Delhi
New York
Paris
San Francisco
"
`;

exports[`build action build multi 4`] = `
"
# cspell-tools: keep-case no-split

black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;
